--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Jürgen Zimmermann <Juergen.Zimmermann@h-ka.de> https://www.h-ka.de
+Luis Kühn       <kulu1020@h-ka.de>
+Moritz Geiger   <gemo1011@h-ka.de>
+Robin Kraus     <krro1024@h-ka.de>
