--- a/.extras/doc/projekthandbuch/projekthandbuch.adoc
+++ b/.extras/doc/projekthandbuch/projekthandbuch.adoc
@@ -16,7 +16,6 @@
 // Preview durch <Strg><Shift>v
 
 = Projekthandbuch
-Jürgen Zimmermann <Juergen.Zimmermann@h-ka.de>
 :doctype: book
 :toc: left
 :sectanchors:
@@ -32,10 +31,6 @@ Jürgen Zimmermann <Juergen.Zimmermann@h-ka.de>
 // http://de.plantuml.com/component.html
 // https://github.com/odrotbohm/asciidoctor-plantuml
 
-IMPORTANT: Copyright (C) 2020 - present Jürgen Zimmermann, Hochschule Karlsruhe. +
-           Free use of this software is granted under the terms of the
-           GNU General Public License (GPL) v3. +
-           For the full text of the license, see the http://www.gnu.org/licenses/gpl-3.0.html[license] file.
 
 == Der Applikationsserver
 
@@ -66,10 +61,10 @@ ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
 cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit
 amet ligula.
 
-."BuchGetController" für Lesezugriffe an der REST-Schnittstelle
-[plantuml,BuchGetController,svg]
+."FilmGetController" für Lesezugriffe an der REST-Schnittstelle
+[plantuml,FilmGetController,svg]
 ----
-include::BuchGetController.plantuml[]
+include::FilmGetController.plantuml[]
 ----
 
 Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec
@@ -84,48 +79,48 @@ include::sequenzdiagramm.plantuml[]
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut.
 
-."BuchWriteController" für Schreibzugriffe an der REST-Schnittstelle
-[plantuml,BuchGetController,svg]
+."FilmWriteController" für Schreibzugriffe an der REST-Schnittstelle
+[plantuml,FilmGetController,svg]
 ----
-include::BuchWriteController.plantuml[]
+include::FilmWriteController.plantuml[]
 ----
 
 === Die GraphQL-Schnittstelle
 
 Donec sollicitudin molestie malesuada. Donec rutrum congue leo eget malesuada.
 
-.BuchQueryResolver für Lesezugriffe an der GraphQL-Schnittstelle
-[plantuml,BuchQueryResolver,svg]
+.FilmQueryResolver für Lesezugriffe an der GraphQL-Schnittstelle
+[plantuml,FilmQueryResolver,svg]
 ----
-include::BuchQueryResolver.plantuml[]
+include::FilmQueryResolver.plantuml[]
 ----
 
 Donec sollicitudin molestie malesuada. Praesent sapien massa, convallis a
 pellentesque nec, egestas non nisi.
 
-.BuchMutationResolver für Schreibzugriffe an der GraphQL-Schnittstelle
-[plantuml,BuchMutationResolver,svg]
+.FilmMutationResolver für Schreibzugriffe an der GraphQL-Schnittstelle
+[plantuml,FilmMutationResolver,svg]
 ----
-include::BuchMutationResolver.plantuml[]
+include::FilmMutationResolver.plantuml[]
 ----
 
 === Die Geschäftslogik
 
 Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget malesuada.
 
-."BuchReadService" von der Geschäftslogik
-[plantuml,BuchReadService,svg]
+."FilmReadService" von der Geschäftslogik
+[plantuml,FilmReadService,svg]
 ----
-include::BuchReadService.plantuml[]
+include::FilmReadService.plantuml[]
 ----
 
 Pellentesque in ipsum id orci porta dapibus. Donec rutrum congue leo eget
 malesuada.
 
-."BuchWriteService" von der Geschäftslogik
-[plantuml,BuchWriteService,svg]
+."FilmWriteService" von der Geschäftslogik
+[plantuml,FilmWriteService,svg]
 ----
-include::BuchWriteService.plantuml[]
+include::FilmWriteService.plantuml[]
 ----
 
 === Klasse für Entities
@@ -134,9 +129,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu erat,
 accumsan id imperdiet et, porttitor at sem.
 
 .Entity
-[plantuml,Buch,svg]
+[plantuml,Film,svg]
 ----
-include::Buch.plantuml[]
+include::Film.plantuml[]
 ----
 
 === ER-Diagramm
